# DNPlayer

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/dongnao/dnplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Audio.cpp  Audio.h  Log.h  Video.cpp  Video.h  native-lib.cpp
app/src/main/java/com/dongnao/dnplayer/: DNPlayer.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/dongnao/dnplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
